--- a/public/global.css
+++ b/public/global.css
@@ -1,11 +1,13 @@
 body {
     padding: 50px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
     background-image: url('https://media3.giphy.com/media/9GIEZ60FUeeSAPyltp/giphy.gif');
     background-size: cover;
     height: 100vh;
     padding:0;
     margin:0;
+    font-family: 'Comic Neue', cursive;
+
   }
   
   a {
