--- a/public/global.css
+++ b/public/global.css
@@ -15,3 +15,9 @@ body {
     color: #00B7FF;
   }
   
+@media only screen and (max-width: 425px){
+  body{
+    font-size: 14px;
+    overflow: auto;
+  }
+}
